[gd_scene load_steps=4 format=2]

[ext_resource path="res://materialBundle/bundle1/my_1.png" type="Texture2D" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://bullet/BulletStrategy.tscn" type="PackedScene" id=3]

[node name="Player" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.499999, 0.500004 )
scale = Vector2( 1.02539, 1 )
polygon = PackedVector2Array( 30.72, 53.5, -29.7448, 54.5, -38.5219, 18.5, -63.8781, 18.5, -88.2591, -8.5, -88.2591, -31.5, -80.4572, -38.5, -79.482, -43.5, -76.5562, -47.5, -71.68, -50.5, -66.8038, -47.5, -63.8781, -44.5, -54.1257, -47.5, -41.4476, -47.5, -37.5467, -51.5, -32.6705, -55.5, -27.7943, -53.5, -24.8686, -51.5, -19.9924, -59.5, -9.26477, -65.5, 11.2152, -65.5, 22.9181, -60.5, 27.7943, -51.5, 31.6953, -52.5, 34.621, -56.5, 38.5219, -52.5, 40.4724, -52.5, 43.3981, -47.5, 57.0515, -47.5, 66.8038, -43.5, 68.7543, -46.5, 70.7048, -46.5, 74.6058, -50.5, 77.5315, -46.5, 80.4572, -46.5, 82.4077, -42.5, 83.3829, -37.5, 89.2343, -30.5, 90.2096, -9.5, 66.8038, 17.5, 37.5467, 18.5 )

[node name="BulletStrategy" parent="." instance=ExtResource( 3 )]

[node name="BulletTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Player_hit"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
